# youscribe

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  test.py  test_youscribe.py
src/: transcribe.py  transcriber.py  transcript.py
src/youscribe.egg-info/: SOURCES.txt
tests/: test.py
youscribe/: models.py  transcript.py
youteplustrans/: scraper.py  transcribe.py  whisper.py
